--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
       "plugin:vue/essential",
       "@vue/standard"
     ],
-    "rules": {},
+    "rules": {
+      "vue/no-parsing-error": [2, { "x-invalid-end-tag": false }]
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
